<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST_TsDiagObjectsEL2912" Id="{59d2fe36-ab71-4806-b6c2-4b21051b0dc9}">
    <Declaration><![CDATA[TYPE ST_TsDiagObjectsEL2912 :
(*******************************************************************************************************
Description			:	Index 16#800E Diagnostic objects
Supported terminals : 	EL2912
Documentation 		:	EL2912 TwinSAFE potential supply terminal with 4 fail-safe inputs and 1 fail-safe output
Version/Date 		:	20.12.2021
********************************************************************************************************)
STRUCT

	nDummyData1								:ARRAY[0..8] OF UINT;

(* Sensor test error *)
	nSensorTestError						:UINT;

(* Error during two channel evaluation *)
	nDuringTwoChannelEvaluationError		:UINT;

(* Error in the safety mat operating mode: input pair disagree *)
	nMatModeInputPairDisagreeError			:UINT;

(* Error in the safety mat operating mode: external supply *)
	nMatModeExternalSupplyError				:UINT;

	nDummyData2								:ARRAY[0..2] OF UINT;

END_STRUCT
END_TYPE
(* End *)]]></Declaration>
  </DUT>
</TcPlcObject>