<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST_TsSlaveInfoEL2912" Id="{1d5634d0-541a-435c-9b85-729033238e54}">
    <Declaration><![CDATA[TYPE ST_TsSlaveInfoEL2912 :
STRUCT
	
(* act_EcSlaveIdentify *)
	sEcSlaveType							:STRING(15);
	sEcSlaveName							:STRING(31) := '';
	bSlaveIdentify							:BOOL;
	bSlaveTypeError							:BOOL;
	{attribute 'displaymode':='hex'}
	nEcProjectCrc							:UINT;
	
	stTsSlaveAddress 						:ST_TsSlaveAddressCRC;
	bSlaveAddressOk							:BOOL;
	
	nEcSlaveFSoEAddr						:UINT;
	nEcSlaveSerialNumber					:UDINT;
	
(* act_ConnectionState *)
	sState									:STRING;
	
(* act_ConnectionDiag *)
	sDiag									:STRING;
	sFault									:STRING;						(* FailSafe Error (Hardware)*)
	bError									:BOOL;							(* TwinSAFE-Error *)
	
(* act_ReadDiagObjects *)
	stSlaveTemp								:ST_TsSlave2Temp;
	bIntTempWarning1						:BOOL;							(* Temperature warning: T1 *)
	bIntTempWarning2						:BOOL;							(* Temperature warning: T2 *)
	stTsDiagObjectsBitsEL2912				:ARRAY[1..2] OF ST_TsDeviceInfoDataEL2912;
	
(* act_Signals *)	
	(* Outputs *)
	bFSOUTChannel1     						:BOOL;
	bFSOUTChannel2     						:BOOL;
	bFSOUTModule1Fault   					:BOOL;
	bFSOUTModule2Fault   					:BOOL;
	bFSOUTModule1ErrAck	   					:BOOL;
	bFSOUTModule2ErrAck	   					:BOOL;

END_STRUCT
END_TYPE
(*End*)]]></Declaration>
  </DUT>
</TcPlcObject>